# Optimizacion_2018

./: CMakeLists.txt  README.md  distanceomp.cpp  exploracionomp.cpp
doc/: Reporte_OMP.tex.bak
optimizacion/: main.cpp  optimization  to_run.txt
read_csv/: file.csv  main.cpp
src/: CMakeLists.txt  DisplayImage.cpp  distance.cpp  main.cpp
